--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Migrate==3.1.0
 flask-shell-ipython==0.4.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.3
 ipython==8.2.0
 itsdangerous==2.1.2
